Z-Index Bug
* Fixed an issue where links would appear above the sticky header in Chrome

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -7,6 +7,7 @@
 	justify-content: space-between;
 	position: sticky;
 	top: 0;
+	z-index: 100;
 
 	.logo {
 		font-family: 'Teko', sans-serif;
